Country ontroller service mapper test (#13)